# teacher_plan

./: .gitignore  CMakeLists.txt  README.md  res.qrc  teacher_plan_ru_RU.ts
api_server/: Dockerfile  requirements.txt  server.py  temp.py  tmpsrv.py
api_server/dependencies/: database.py
api_server/models/: academy.py  basemodel.py  general.py  teacher_plan.py  user.py
api_server/routers/: academy.py  user.py
api_server/schemas/: academy.py  general.py  user.py
api_server/scripts/: create_tables.py  fill_test_data.py
api_server/services/: academy.py  auth.py  general.py  user.py
backup/: 20241008_1836  20241022_1130  20241024_0855  20241028_1714  20241029_1427
client/: base.sql  res.qrc  teacher_plan.pro
client/src/: formeducationwork.h  formtotaltime.cpp  formtotaltime.h  formtotaltime.ui  header.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  totaltimelist.h
cmake/: ASAN.cmake  GlobalFlags.cmake
doc/: news.txt  Инструкция.docx  Нормы расчета уч.нагрузки ППС 2024.docx  Приказ о закреплении уч. дисциплин 2024-2025.doc  Список предметов.doc
docs/: Enhancements.txt
i18/: teacher_plan_ru_RU.ts
server/: requirements.txt  server.py  settings.py
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  settings.cpp  settings.h
src/database/: database.cpp  database.h  dictionarymodel.cpp  dictionarymodel.h  planemanager.cpp  planemanager.h  staff.cpp  staff.h  types.h
src/educationwork/: delegateeducationwork.cpp  delegateeducationwork.h  educationwork.cpp  educationwork.h  hours.cpp  hours.h  (+20 more)
teacher_plan/: loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  teacher_plan.pro  totaltime.cpp  totaltime.h  totaltime.ui
(+260 files in other folders)
